dist/identity-provider/k8s/minikube/saml-ingress.yaml
# Your installation or use of this SugarCRM file is subject to the applicable
# terms available at
# http://support.sugarcrm.com/Resources/Master_Subscription_Agreements/.
# If you do not agree to all of the applicable terms or do not have the
# authority to bind the entity as an authorized representative, then do not
# install or use this SugarCRM file.
#
# Copyright (C) SugarCRM Inc. All rights reserved.

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: saml-server
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: saml-server
    http:
      paths:
      - path: /
        backend:
          serviceName: saml-server
          servicePort: 80
